--- a/otus_hw_1/README.ipynb
+++ b/otus_hw_1/README.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "72abe133",
    "metadata": {},
@@ -28,18 +27,25 @@
     "### DS метрики\n",
     "Считаем, что класс **Positive** отностится к мошенническим транзакциям. Их должно быть не больше 2% от общего количества транзакций. Класс **Negative** - обычные транзакции, ошибка в котороых не должна превышать 5%.\\\n",
     "Представим, что есть 100 транзакций. Возьмем крайний случай, когда мы не определили ни одной из двух мошеннических транзакций. Также, добавим ошибку в определении клиентских транзакций - 5шт. Получаем следующие значения:\n",
-    "* TP = 0\n",
-    "* TN = 93\n",
-    "* FP = 2\n",
-    "* FN = 5\n",
-    "\n",
-    "**Матрица ошибок. Крайний случай.**\n",
-    "![heatmap](attachment:img/heatmap.png)\n",
     "\n",
     "* `Precision >= 0.949` - ошибка 1 рода\n",
     "* `Recal >= 0.979` - ошибка 2 рода\n",
-    "* => `F1-score >= 0.969` - среднегармоническое между точностью и полнотой"
+    "* => `F1-score >= 0.969` - среднегармоническое между точностью и полнотой\n",
+    "\n",
+    "## Mission Model Canvas\n",
+    "![Mission Canvas](otus_hw_1/img/Business-Model-Canvas_no_title.png)\n",
+    "\n",
+    "## Декомпозиция системы\n",
+    "![System](otus_hw_1/img/System.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53d7a240",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
