add confusion matrix

--- a/otus_hw_1/README.ipynb
+++ b/otus_hw_1/README.ipynb
@@ -26,10 +26,16 @@
     "Из информации о партнерах известно, что доля мошеннических операций не должна превышать 2%, и суммарные потери от этих транзакций не должны превышать 500т.р. Количество ложно определенных мошеннических операций не должна превышать 5%. \n",
     "### DS метрики\n",
     "Считаем, что класс **Positive** отностится к мошенническим транзакциям. Их должно быть не больше 2% от общего количества транзакций. Класс **Negative** - обычные транзакции, ошибка в котороых не должна превышать 5%.\\\n",
-    "Представим, что есть 100 транзакций. Возьмем крайний случай, когда мы не определили ни одной из двух мошеннических транзакций. Также, добавим ошибку в определении клиентских транзакций - 5шт. Получаем следующие значения:\n",
+    "Представим, что есть 100 транзакций. Возьмем крайний случай, когда мы не определили ни одной из двух мошеннических транзакций. Также, добавим ошибку в определении клиентских транзакций - 5шт. \n",
+    "Крайний допустимый случай:\n",
+    "| |Предсказанные нормальные операции|Предсказанные мошеннические операции|\n",
+    "|----------------------|--------------------|---------------------|\n",
+    "|**Нормальные операции**|TP - 93|FP - 5|\n",
+    "|**Мошеннические операции**|FN - 2|TN - 0|\n",
     "\n",
-    "* `Precision >= 0.949` - ошибка 1 рода\n",
-    "* `Recal >= 0.979` - ошибка 2 рода\n",
+    "Получаем следующие значения:\n",
+    "* `Precision >= 0.949` - TP / (TP + FP) ошибка 1 рода\n",
+    "* `Recal >= 0.979` - TP / (TP + FN) ошибка 2 рода\n",
     "* => `F1-score >= 0.969` - среднегармоническое между точностью и полнотой\n",
     "\n",
     "## Mission Model Canvas\n",
@@ -50,9 +56,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "otus",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "otus"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -64,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
